main/default/objects/Product_Configuration__c/fields/Is_Number__c.field-meta.xml
<CustomField>
    <fullName>Is_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Number</label>
    <type>Checkbox</type>
</CustomField>